force-app/main/default/objects/DN_Quota__c/DN_Quota__c.object-meta.xml
<CustomObject>
    <label>DN Quota</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>DN Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DN Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>