force-app/main/default/objects/DN_Quota__c/fields/Implant_Quota__c.field-meta.xml
<CustomField>
    <fullName>Implant_Quota__c</fullName>
    <label>Implant Quota</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>