force-app/main/default/objects/DN_Quota__c/fields/Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep Code</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>