force-app/main/default/objects/DN_Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rep_Code__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Total_Quota__c</columns>
    <columns>Implant_Quota__c</columns>
    <columns>Prosthetic_Quota__c</columns>
    <columns>Regenerative_Quota__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>